[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Spectral-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Arrows/bow and arrow cut/tile005.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Arrows/RicochetArrowProjectile.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.67164, 1.27115 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Arrow" type="Area2D"]
z_index = -1
gravity = 10.0
collision_layer = 4
collision_mask = 35
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="ArrowSprite" type="Sprite" parent="."]
position = Vector2( -17.5, 0.75 )
scale = Vector2( 2.5, 1.35 )
texture = ExtResource( 2 )

[node name="ArrowCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, -5, -2, -5, 2 )

[node name="StuckArea" type="Area2D" parent="."]
collision_mask = 35

[node name="StuckCollider" type="CollisionShape2D" parent="StuckArea"]
position = Vector2( -8, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DespawnDebugLabel" type="Label" parent="."]
margin_left = -31.0
margin_top = -20.0
margin_right = 2.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnProtTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="RicochetRaycast" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_Arrow_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="body_entered" from="StuckArea" to="." method="_on_StuckCollider_body_entered"]
[connection signal="body_exited" from="StuckArea" to="." method="_on_StuckArea_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="SpawnProtTimer" to="." method="_on_SpawnProtTimer_timeout"]
